# dggridpy

./: .gitignore  API.md  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE.txt  README.md  build-docker.bat  dggridpy.cpp  requirements.txt  run-docker.bat  run-notebook.sh  setup.cfg  setup.py
notebooks/: DGGS included in dggridpy.ipynb  Use case of DGGS for spatial statistics (Earthquackes frequency).ipynb
src/: DgOutLocFile.h  DgOutLocTextFile.h  dggrid.h
